add other qrcode

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <img src="./tu.png">
-  <img src="./1528467812.png">
+  <img src="./WX20180609.png">
   <script src="./jquery.min.js"></script>
   <script src="./llqrcode.js"></script>
   <script>
